tests/machine/x/st/tail_recursion.out
Object: 55 error: return from a dead method context
SystemExceptions.BadReturn(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.BadReturn class(Exception class)>>signal (ExcHandling.st:151)
SmallInteger(Object)>>badReturnError (Object.st:1389)
[] in UndefinedObject>>executeStatements (../../../tests/machine/x/st/tail_recursion.st:5)
[] in UndefinedObject>>executeStatements (../../../tests/machine/x/st/tail_recursion.st:5)
[] in UndefinedObject>>executeStatements (../../../tests/machine/x/st/tail_recursion.st:5)
[] in UndefinedObject>>executeStatements (../../../tests/machine/x/st/tail_recursion.st:5)
[] in UndefinedObject>>executeStatements (../../../tests/machine/x/st/tail_recursion.st:5)
[] in UndefinedObject>>executeStatements (../../../tests/machine/x/st/tail_recursion.st:5)
[] in UndefinedObject>>executeStatements (../../../tests/machine/x/st/tail_recursion.st:5)
[] in UndefinedObject>>executeStatements (../../../tests/machine/x/st/tail_recursion.st:5)
[] in UndefinedObject>>executeStatements (../../../tests/machine/x/st/tail_recursion.st:5)
[] in UndefinedObject>>executeStatements (../../../tests/machine/x/st/tail_recursion.st:5)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/tail_recursion.st:6)